--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
           python3 -m pip install -r ./requirements.txt
 
       - name: Check site builds
-        run: mkdocs build --strict
+        run: mkdocs build
