Add version file to deployment

--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Build the docs
         run: mkdocs build
 
+      - name: Add a version file
+        run: echo ${{ github.GITHUB_SHA }} > site/version.html
+
       - name: Publish
         uses: cloudflare/pages-action@1
         with:
