Add some initial Linux installation notes
Prompted by @mdvthu in #730.

These notes are deliberately left a little to the reader to decide how
they want to proceed. This is for the reasons given in the text.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
           - Docker: install-docker.md
           - OpenSAFELY CLI: opensafely-cli.md
           - macOS: install-macos.md
+          - Linux: install-linux.md
       - Study definitions:
           - Overview: study-def.md
           - Working with dates: study-def-dates.md
