Display page update from last Git revision
Relates to #762.

Using Material for MkDocs support for
`mkdocs-git-revision-date-plugin`.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ copyright: © University of Oxford for the Bennett Institute for Applied Data Sc
 
 plugins:
   - search
+  - git-revision-date
   - mkdocstrings:
       default_handler: python
       handlers:
