--- a/requirements.prod.in
+++ b/requirements.prod.in
@@ -4,6 +4,7 @@
 # pip-compile --generate-hashes --output-file=requirements.prod.txt requirements.prod.in
 
 mkdocs
+mkdocs-macros-plugin
 mkdocs-material
 https://github.com/opensafely-core/mkdocs-opensafely-databuilder/archive/c943a4b4f052848a314ad27c34006269a0fbea90.zip#mkdocs-opensafely-databuilder
 mkdocstrings[python]
