Watch the includes directory
If we change an include, then we want the docs to rebuild.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,7 @@ plugins:
       custom_templates: templates
       watch:
         - examples
+        - includes
         - public_docs.json
   - mkdocs-opensafely-databuilder
   - macros
