--- a/databuilder/justfile
+++ b/databuilder/justfile
@@ -115,7 +115,7 @@ sqlcheck: devenv
     set -euo pipefail
     # Use xargs here over find with the -exec option.
     # xargs produces a non-exit error code when command it runs fails.
-    find wip-dataset-definitions/ -type f -name "*.py" -print0 | xargs -0 $BIN/python -m databuilder dump-dataset-sql
+    find wip-dataset-definitions/ -type f -name "dataset_definition*.py" -print0 | xargs -0 -n 1 $BIN/python -m databuilder dump-dataset-sql
 
 # Run the dev project
 run: devenv
