Add a SQL check to workflow

--- a/.github/workflows/check_snippets.yml
+++ b/.github/workflows/check_snippets.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Run dev tooling on snippets
         run: just databuilder/check
 
+      - name: Check dataset definitions generate valid SQL
+        run: just databuilder/sqlcheck
+
       - name: Check snippets work
         run: |
           # extract examples from the snippets, this will also test they are
