--- a/.github/workflows/update_databuilder_docs.yml
+++ b/.github/workflows/update_databuilder_docs.yml
@@ -17,45 +17,81 @@ jobs:
     
     runs-on: ubuntu-latest
 
+    env:
+      BRANCH: update-docs-${{ github.event.inputs.branch_tag }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3    
       
-      - name: Download release artifact
-        run: |
-          curl -L ${{ github.event.inputs.download_url }} > public_docs.json
+      - name: Check if branch exists
+        id: check-branch
+        run: echo ::set-output name=branch-exists::`git ls-remote --heads origin ${BRANCH}`
 
-      - name: commit new docs file
-        env:
-          BRANCH: update-docs-${{ github.event.inputs.branch_tag }}
+      - name: Create or checkout branch
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git checkout -b $BRANCH
+          if [ -n "${{ steps.check-branch.outputs.branch-exists }}" ]; then
+            echo "Checking out existing branch"
+            git fetch origin $BRANCH
+            git checkout $BRANCH
+          else
+            echo "Creating new branch"
+            git checkout -b $BRANCH
+          fi
+
+      # Download the release artifact from the provided URL; in case of a workflow re-run,
+      # we also check if it's different to the one on the current branch
+      - name: Download release artifact
+        id: release-artifact
+        run: |
+          curl -L ${{ github.event.inputs.download_url }} > downloaded_public_docs.json
+          echo "::set-output name=changed::$(cmp public_docs.json downloaded_public_docs.json)"
+
+      - name: commit new docs file
+        if: ${{ steps.release-artifact.outputs.CHANGED }}
+        run: |
+          echo ${{ steps.release-artifact.outputs.CHANGED }}
           git add public_docs.json
           git commit -m "Update databuilder docs"
           git push origin $BRANCH
 
+      # Open a PR for this branch, if one isn't already open
       - name: Open PR
+        id: list-pr
         uses: actions/github-script@v6
         env:
-          BRANCH: update-docs-${{ github.event.inputs.branch_tag }}
+          HEAD: 'opensafely:${{env.BRANCH}}'
         with:
           script: |
             const { repo, owner } = context.repo;
-            const { BRANCH } = process.env;
-            result = await github.rest.pulls.create({
-              title: 'Update databuilder docs',
+            const { HEAD } = process.env;
+
+            pull_requests = await github.rest.pulls.list({
               owner,
               repo,
-              head: BRANCH,
+              state: 'open',
+              head: HEAD,
               base: 'main',
             });
+            if (pull_requests.data.length > 0) {
+              console.log("Open pull request already exists")
+              console.log(pull_requests.data[0])
+            } else {
+              result = await github.rest.pulls.create({
+                title: 'Update databuilder docs',
+                owner,
+                repo,
+                head: BRANCH,
+                base: 'main',
+              });
+            }
       
       - name: Trigger build-check
         uses: actions/github-script@v6
         env:
-          BRANCH: update-docs-${{ github.event.inputs.branch_tag }}
+          BRANCH: '${{env.BRANCH}}'
         with:
           script: |
             const { repo, owner } = context.repo;
@@ -66,4 +102,3 @@ jobs:
               workflow_id: 'build.yml',
               ref: BRANCH,
             })
- 
