Pin black dependency for databuilder

--- a/databuilder/requirements.dev.in
+++ b/databuilder/requirements.dev.in
@@ -4,7 +4,9 @@
 # To generate a requirements file that includes both prod and dev requirements, run:
 # pip-compile --generate-hashes --output-file=requirements.dev.txt requirements.dev.in
 
-black
+# Pin black for now to avoid dependency constraint conflict.
+# black and snex both use click, but snex uses an older version of click.
+black==21.12b0
 flake8
 flake8-builtins
 flake8-implicit-str-concat
