Wrangle the `.pre-commit` version of black
This partly deals with #886.

To recap/summarise, we're tied to this version because:

1. The `databuilder/` directory has its own black check, which is used
   in the GitHub workflow checks.
2. The `databuilder/` requirements include snex which is still on
   v7 of click.
3. The latest version of black requires v8 of click.
4. The pre-commit checks check the Python code and use the black version
   as indicated by `.pre-commit-config.yaml`.
5. To avoid any conflicts, these two versions of black should be the
   same.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     rev: 21.12b0
     hooks:
     - id: black
+      additional_dependencies: ['click<8']
 
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
