--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ default_language_version:
 
 repos:
   - repo: https://github.com/psf/black
+    # Pinned temporarily for consistency with the databuilder directory's
+    # requirements; see #886.
     rev: 21.12b0
     hooks:
     - id: black
