Add a rudimentary dataset definition check
Confirm that they are valid.

It does not (yet) confirm that they give the expected output.
A rudimentary implementation might be:

* store the outputs in a directory (because we need them anyway for the
  tutorial)
* check the diff with git of that directory after generation
* fail if the contents have changed

The Data Builder command can be improved with a later release.

--- a/.github/workflows/check_snippets.yml
+++ b/.github/workflows/check_snippets.yml
@@ -25,7 +25,7 @@ jobs:
         run: just databuilder/check
 
       - name: Check dataset definitions generate valid SQL
-        run: just databuilder/sqlcheck
+        run: just databuilder/check-dataset-definitions
 
       - name: Check snippets work
         run: |
